more tidy up on transactions, ensure immutable used for all route calcs as means always use caching